client/src/index.css
body {
	background: #f2f2f2;
}

/* this makes jump links work correctly with the header overlaying content */
*[data-jumptarget]:before {
  display: block;
  content: " ";
  margin-top: -152px;
  height: 152px;
  visibility: hidden;
}

h5 {
	text-decoration: underline;
}

.breadcrumb {
	background: #f9f9f9;
}

button {
	z-index:2;
}

input[type=checkbox][readonly] {
	cursor: not-allowed;
}

fieldset {
	background: #fff;
	border: 1px solid #e0e0e0;
	padding: 1.25em;
	margin: 0;
	margin-bottom: 3rem;
	width: 100%;
}

.legend {
	float: left;
	width: 100%;
	color: #363636;
	border: none;
	font-weight: normal;
}

h2.legend {
	font-size: 2rem;
	margin-top: 1rem;
}

.legend small {
	float: right;
	font-size: 1.2rem;
	margin: 1rem 0.5rem 0 0;
}

.legend small .btn {
	margin-top: -2rem;
}

.legend small :not(.btn-group) .btn + .btn {
	margin-left: 1rem;
}

.form-top-submit {
	margin-bottom: 1rem;
}

fieldset .pagination {
	margin: 0;
}

fieldset .negative-bottom {
	margin-bottom: -20px;
}

fieldset .help-text {
	font-size: 12px;
	font-weight: bold;
	color: #888;
	text-transform: uppercase;
	letter-spacing: 1px;
	text-align: center;
	margin-bottom: 24px;
}

fieldset .chart-description {
	color: #777;
	text-align: left;
	padding-bottom: 8px;
	padding-left: 8px;
}

fieldset.collapsable {
	background: none;
	border: none;
}
fieldset.collapsable legend hr {
	border: 1px solid #e0e0e0;
	margin-top: 10px;
}
fieldset.collapsable legend div.collapsableToggle {
	margin-right: 5px;
}

fieldset.warning {
	border: 2px solid orange;
}

fieldset.danger {
	border: 2px solid red;
}

.input-group {
	width: 100%;
}

.form-control-icon {
	position: absolute;
	top: 4px;
	left: 0.5rem;
	height: 26px;
	z-index: 5;
	opacity: 0.5;
}

.react-autosuggest__container input {
	padding-left: 3.2rem;
}

.react-autosuggest__suggestions-list {
	max-height: 231px;
	overflow-y: scroll;
}

.shortcut-list {
	margin-top: -4px;
}

.shortcut-list h5 {
	margin: 3px 0 4px 0;
}

.shortcut-list .btn-link {
	text-align: left;
	white-space: initial;
	padding: 0;
}

.btn.btn-link {
	overflow: visible;
	width: 100%;
}

.btn-group .radio-inline, .btn-group-vertical .radio-inline {
	padding: 0;
	margin: 0;
}

.btn-group .radio-inline input, .btn-group-vertical .radio-inline input {
	display: none;
}

.dropdown-menu {
	overflow-y: auto;
	max-height: 400px;
}

.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
	background-color: #e0e0e0;
}

.nav > li > a:hover, .nav .open > a:focus {
	background-color: #e0e0e0;
}

.header .logo img, .header input, .header button {
	height: 38px;
}

.header button {
	font-weight: bold;
}

.header .row > div * {
	margin: 0;
}

.header small a {
	padding: 5px;
	text-decoration: underline;
	display: inline-block;
	cursor: pointer;
}

.banner {
	color: #fff;
	width: 100%;
	font-size: 18px;
	text-align: center;
	z-index: 10;
}

#advanced-search.popover {
	width: 600px;
	max-width: none;
}

.nprogress-custom-parent .bar {
	top: 130px !important;
}

.nprogress-custom-parent .peg {
	transform: rotate(-3deg) translate(0px, 4px) !important;
}

.nprogress-custom-parent .spinner {
	top: 104px !important;
	right: 8px !important;
}

.graphiql-container {
	min-height: 600px;
}

.todo {
	background-color: red;
}

.home-tile-row {
	padding: 0;
}

.home-tile-row .container-fluid {
	padding: 0;
	display: block;
}

.home-tile-row .row {
	display: table;n
	width: 100%;
	margin: 0;
}

.home-tile-row span.close-getting-started {
	position: relative;
	top: -10px;
	right: 5px;
	font-size: 1.2rem;
	float: right;
	cursor: pointer;
	opacity: .2;
	color: #000;
	text-shadow: 0 1px 0 #fff;
	font-weight: bold;
}

.home-tile-row span.close-getting-started:hover {
	opacity: .5;
	text-decoration: none;
}

a.home-tile {
	display: table-cell;
	width: 20%;
	float: none;
	vertical-align: top;
	text-align: center;
	padding: 10px;
	color: #5c5c5c;
	text-decoration: none;
}
.home-tile h1 {
	font-weight: 900;
}

.home-tile:hover {
	background: #dae3ee;
}

.person-icon, .position-icon {
	margin-right: 4px;
}

.primary-attendee .checkbox {
	padding: 0;
	margin: 0;
	text-align: center;
}

.loading .anet section {
	visibility: hidden;
}

.loading .anet section:before {
	content: "Loading...";
	visibility: visible;
	font-size: 2rem;
}

.nav img {
	width: 16px;
	margin-right: 6px;
}

.nav .nav > li {
	border-left: 4px solid rgba(0,0,0,0);
}

.nav .nav > li a {
	padding: 4px 0 4px 38px;
}

.nav .nav > li.active  {
	border-left:4px solid #1772B8;
}

li#search-nav .nav > li {
	border-left: none;
}

li#search-nav .nav > li a {
	padding-right: 4px;
}

.report-sub-form .form-group {
	margin: 24px;
}

.report-sub-form textarea {
	width: 100%;
}

.report-sub-form .right-button {
	float: right;
	margin-right: 24px;
}

.report-sub-form button {
	margin-left: 24px;
}

.report-collection header {
	margin-bottom: 18px;
}

.report-collection footer {
	margin-top: 18px;
}

.report-summary {
	margin-top: 18px;
	padding-top: 18px;
	border-top: 1px solid #ccc;
}

.report-summary .row {
	margin-top: 3px;
}

.report-summary .engagement-date {
	margin-right: 10px;
	padding-left: 10px;
	padding-right: 10px;
}

.report-summary .people-separator {
	margin-left: 5px;
	color: #555;
	font-size: 1.4rem;
}

.report-summary h2 {
	font-size: 14px;
	font-weight: bold;
}

.not-found section.container {
	width: 100%;
	max-width: none;
	padding: 0;
	margin: 0;
}

.not-found .not-found-text {
	text-align: center;
}

.not-found .col-sm-3 {
	display: none;
}

.not-found .col-sm-9 {
	width: 100%;
}

.onboarding-new {
	width: 40%;
	margin-left: auto;
	margin-right: auto;
}

.onboarding-new h1, .onboarding-new p, .onboarding-new button {
	text-align: center;
}

.onboarding-new h1 {
	font-size: 24px;
	font-weight: bold;
	margin-bottom: 36px;
}

.onboarding-new p {
	font-size: 16px;
	margin-bottom: 24px;
}

.onboarding-new .help {
	margin-top: 36px;
}

.onboarding-new .help p {
	font-size: 12px;
	color: #999;
	margin-bottom: 0px;
}

.onboarding-new .create-account-button-wrapper {
	text-align: center;
}

.onboarding-new .role {
	text-transform: uppercase;
}

.getting-started-grid {
	padding-left: 0;
	padding-right: 0;
}

.getting-started-grid .row  {
	width: 100%;
	margin-left: auto;
	margin-right: auto;
	text-align: center;
}

.getting-started-grid .row:first-child {
	margin-bottom: 20px;
}

.getting-started-grid .row:last-child {
	margin-top: 20px;
}

.getting-started-grid .row h3,button {
	margin-top: 0;
	margin-bottom: 0;
}

.getting-started-grid .row h3 {
	font-size: 16px;
}

.getting-started-grid .row button {
	font-size: 12px;
}

.getting-started-grid {
	padding-top: 15px;
	padding-bottom: 15px;
}

.getting-started-grid a {
	font-weight: bold;
}

.getting-started-grid p {
	margin-bottom: 0;
}

table.borderless td {
	border: none !important;
}

table hr.attendee-divider {
	margin: 0px;
}

.report-cancelled {
	/*border-left: 1.5rem solid #DA9795;*/
	border-left: 1.5rem solid #C23030;
	padding-left: 1rem;
}

.report-rejected {
	border-left: 1.5rem solid #EB532D;
	padding-left: 1rem;
}

.report-draft {
	border-left: 1.5rem solid #f3a537;
	padding-left: 1rem;
}

.report-future {
	/*border-left: 1.5rem solid #238C2C; */
	border-left: 1.5rem solid #00998C;
	padding-left: 1rem;
}

.report-pending {
	border-left: 1.5rem solid #2965CC;
	padding-left: 1rem;
}

.report-form fieldset:last-child {
	margin-bottom: 10px;
}

.submit-buttons {
	display: flex;
	align-items: flex-end;
	margin: 5rem 0 5rem 0;
}

.submit-buttons > div {
	margin-left: 2.5rem;
}

.submit-buttons > div:first-child {
	flex-grow: 2;
	margin-left: 0;
}

.submit-buttons .btn-primary {
	font-weight: bold;
	height: 38px;
}

.report-form .report-details {
	width: 90%;
	margin-left: auto;
	margin-right: auto;
}

.report-form textarea {
	/* Without this, users can make the textarea arbitrarily wide,
		causing it to overlap with other elements and break the layout. */
	max-width: 100%;
}

.attendee-divider-row td {
	padding: 0 !important;
}

.attendee-divider-row hr {
	color: #5B616B;
	border-top: dashed;
	border-width: 2px;
	margin: 0;
}

.show-report-overview label.col-sm-2 {
	/* This clobbers the grid system but w/e. */
	width: 130px;
}

/* Specific styling for report tags in edit mode */
.reportTag {
	margin-right: 0.5em;
}
.reportTag::before {
	content: "#";
}
.reportTagRemove {
	margin-left: 0.25em;
	color: white;
    cursor: pointer;
}
.reportTagRemove, .reportTagRemove:hover {
    text-decoration: none;
}
.reportTag.label {
	display: inline-block;
	font-size: 80%;
	line-height: inherit;
}

.form-control-static {
	/* The design calls for 18px of separation between static form rows.
		The form row already has padding-top: 7px and padding-bottom: 7px,
		and the form control has margin-bottom: 15px. 15 + x = 18 - (7 + 7); x = -11
	*/
	margin-bottom: -11px;
}

.no-position-warning {
	text-align: center;
}

hr.assignModalSplit {
	border-bottom: 1px solid #555;
}

.help-page .help-text {
	font-size: 2rem;
}

.help-page h4 {
	margin-top: 5rem;
}

.text-editor {
	border: 1px solid #ccc;
	border-radius: 5px;
	margin-top: 4px;
	padding: 4px;
	outline: none;
}

.text-editor:focus {
	outline: none;
}

.ae-toolbar, .ae-toolbar-styles {
	z-index: 10 !important;
}

header.searchPagination {
	height: 35px;
}

.bar {
	cursor: pointer;
}

.bar text {
	font-size:0.75em;
}

.graph-legend {
	margin-top: 4px;
	font-size: 0.8em;
}

.advanced-search .col-xs-3 select {
	margin-top: -8px;
}

.advanced-search select {
	height: 32px;
}
.only-show-for-print {
	display: none;
}

.general-banner {
	padding: 7px;
	margin-bottom: 0;	
	border-radius: 0;
	border: 1px solid transparent;
	animation: flash 1s forwards ease-in 0.5s 3 normal;
}

.general-banner.alert-info {
	background-color: #359aef;
	color:#fff;
}
.general-banner.alert-success {
	background-color: #85e160;
}
.general-banner.alert-warning {
	background-color: #fce469;
}
.general-banner.alert-danger {
	background-color: #f22a2a;
	color: #fff;
}

.reports-filter {
	padding-top: 18px;
}

@keyframes flash {
	50% {
		background: #fff;
	}
}

@media print {
	.only-show-for-print {
		display: inherit;
	}

	.breadcrumb, .header, .banner, .add-new-comment, button, .btn, .hide-for-print {
		display: none !important;
	}

	body {
		margin-top: 0
	}

	/* If we don't have this, then every link will be printed with its href afterwards. So "CIV Erin Erinson" will be printed as:
	 
	 		CIV Erin Erinson (/people/256)
	 
	   My intuition is that this is useless visual clutter, but maybe it would be useful to people.
	 */
	a[href]:after {
		content: none;
	}

	/* The following rules are from Bootstrap, but they're in media queries. Those media queries do not get picked up for @media print,
		so we need to copy them here for the print view to see them. If we ever change the version of Bootstrap being used, we'll have
		to re-copy the styles here to make the print view consistent. */
	.form-horizontal .control-label {
		padding-top: 7px;
		margin-bottom: 0;
		text-align: right;
	}

	.col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
		float: left;
	}
	/* end styles copied from bootstrap */

	/* Normally, the primary content is 9 columns. When we remove the nav, we'd like the primary content to expand to fill the remaining space.
		To do this, we'll override the 9 columns class and make the width 100% */
	.primary-content {
		width: 100%
	}
}

